fix discover bug